# Image-caption-generator

./: .coverage  .gitignore  INSTALL.md  README.md  app.py  baseline.py  dataset.py  eda.ipynb  env.yml  eval.py  inference.py  load_models_local.py  preprocess.py  pyproject.toml  requirements.txt  run.sh  test.py  train.py  utils.py
baselines/: baseline.py
clipLSTM/: clip.py  config.yaml  dataset.py  eval.py  inference.py  preprocess.py  train.py  utils.py
decoder/: model.py
encoder/: clip.py  preprocess.py
src/: __init__.py  clip.py  config.yaml  dataset.py  model.py  utils.py
src/ICGmodel/: __init__.py  config.py  config.yaml  dataset.py  model.py  utils.py
tests/: conftest.py  test_app.py  test_baseline.py  test_dataset.py  test_eval.py  test_inference.py  test_model.py  test_model_inference.py  test_preprocess.py  test_train.py  test_train_eval.py  test_utils.py
