[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "image-caption-generator"
version = "0.1.0"
description = "An image caption generation model as a univeristy project"
authors = [
    {name = "Maria Drencheva", email = "mdrencheva@gmail.com"},
]
requires-python = ">=3.8"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = "requirements.txt"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["."]
